--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://dev-saurav.github.io/exambazaar",
   "name": "exambazaar",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +17,8 @@
     "uuid": "^8.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
