--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://dev-saurav.github.io/exambazaar",
+  "homepage": "http://dev-saurav.github.io/exambazzar/",
   "name": "exambazaar",
   "version": "0.1.0",
   "private": true,
